# messenger-grpc

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix  lock.aarch64-darwin.json  lock.x86_64-linux.json  pyproject.nix  pyproject.toml  setup.py
.github/workflows/: main.yml
doc/: grpc_generate_pyi.md  wsl_forward_port_to_host.md
messenger_grpc/: __init__.py  client.py  server.py
nix/: cppmessenger-grpc.nix  pymessenger-grpc.nix  uv.nix
proto/: messenger-grpc.proto
proto/messenger_grpc/: chat_service.proto  messenger_grpc.proto
scripts/: pyclient.py  pyserver.py
src/: cppclient.cpp
