[build-system]
requires = [ "setuptools", "grpcio-tools ~= 1.68.1" ]
build-backend = "setuptools.build_meta"


[project]
name = "messenger_grpc"
version = "0.0.0"

requires-python = ">=3.10"

dependencies = [
    "grpcio ~= 1.68.1",
    "aioconsole  ~= 0.8.1",
]


[tool.setuptools]
packages = [ "messenger_grpc" ]
script-files = [
    "scripts/pyserver.py",
    "scripts/pyclient.py",
]

